# async-chat

./: .gitignore  Cargo.toml  README.md
configuration/: ClientSettings.toml  ServerSettings.toml
src/: client_lib.rs  globals.rs  lib.rs  server_lib.rs  shared_lib.rs  telemetry.rs
src/client_lib/: globals.rs  handshaking.rs  sending_messages.rs  settings.rs
src/server_lib/: administration.rs  connection_handling.rs  id_record.rs  settings.rs  structs.rs
src/server_lib/connection_handling/: auxiliaries.rs  handshaking.rs
src/server_lib/id_record/: auxiliaries.rs
src/shared_lib/: graceful_shutdown.rs  socket_handling.rs
