[package]
name = "async-chat"
version = "0.1.0"
authors = ["hjrgrn <187955624+hjrgrn@users.noreply.github.com>"]
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "./src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
# tokio-util = { version = "0.7.8", features = ["full"] }
config = "0.14.0"
serde = { version = "1.0.209", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
